Add 강좌2(Angular Component3)

--- a/StudyProject/Front/src/app/app.component.html
+++ b/StudyProject/Front/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div>Angular Study</div>
 <app-sample2></app-sample2>
+<app-sample3 propsTest="props Test hello props Test"></app-sample3>
+<app-sample3 *ngFor="let fruits of fruits" [furitsList]="fruits"></app-sample3>
 
 <router-outlet></router-outlet>
