--- a/StudyProject/Front/src/app/sample2/sample2.component.html
+++ b/StudyProject/Front/src/app/sample2/sample2.component.html
@@ -1,3 +1,5 @@
 <p>sample2 works!</p>
 <p>name : {{ name }}</p>
 <button (click)="onClickMe($event)">Click me!</button>
+
+<input type="text" [(ngModel)]="name" >
