--- a/StudyProject/Front/src/app/app.component.html
+++ b/StudyProject/Front/src/app/app.component.html
@@ -2,5 +2,6 @@
 <app-sample2></app-sample2>
 <app-sample3 propsTest="props Test hello props Test"></app-sample3>
 <app-sample3 *ngFor="let fruits of fruits" [furitsList]="fruits"></app-sample3>
+<app-sample3 (custom)="custom()"></app-sample3>
 
 <router-outlet></router-outlet>
