Add 강좌2(Angular Component 연결1-셋팅)

--- a/StudyProject/Front/src/app/app.component.html
+++ b/StudyProject/Front/src/app/app.component.html
@@ -1,7 +1,5 @@
-<div>Angular Study</div>
-<app-sample2></app-sample2>
-<app-sample3 propsTest="props Test hello props Test"></app-sample3>
-<app-sample3 *ngFor="let fruits of fruits" [furitsList]="fruits"></app-sample3>
-<app-sample3 (custom)="custom()"></app-sample3>
-
-<router-outlet></router-outlet>
+<div style="text-align:center">
+  <app-grand>
+    
+  </app-grand>
+</div>
