--- a/StudyProject/Front/src/app/parent/parent.component.html
+++ b/StudyProject/Front/src/app/parent/parent.component.html
@@ -1,2 +1,3 @@
 <p>parent works!</p>
-<app-child></app-child>
+<h2>{{ age }}</h2>
+<app-child name="Jeery" [age]="age" (next)="next()" ></app-child>
