--- a/StudyProject/Front/src/app/child/child.component.html
+++ b/StudyProject/Front/src/app/child/child.component.html
@@ -1,2 +1,5 @@
 <p>child works!</p>
 <h2>이름 : {{ name }}, 나이 : {{ age }} </h2>
+
+<input #myInput type="text">
+<button (click)="click(myInput.value, $event)">Click me!</button>
